pom update, seperating unit tests and integration tests hopefully improving reliability